# Chyren

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .vercelignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CITATIONS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  GOVERNANCE.md  HISTORY_MASTER_CATALOG.md  Makefile  PUBLICATIONS.md  README.md  RUNBOOK.md  SECURITY.md  STRUCTURE.md  SUPPORT.md  bootstrap_omega_next.sh  check_schema.py  chiral_thesis.md  chyren  chyren.legacy  chyren_best_form.txt  commit_msg.txt  docker-compose.yml  ingest_neon_db.py  launch-omega.sh  main.py  n8n_broadcast_workflow.json  package-lock.json  package.json  pytest.ini  requirements.txt  (+5 more)
chyren-os/kernel/chyren-conductor/: Cargo.toml
chyren-os/kernel/chyren-conductor/src/agents/: mod.rs  (+1 more)
chyren-os/kernel/chyren-metacog/: Cargo.toml
chyren-os/kernel/chyren-metacog/src/: dream.rs  lib.rs
chyren-os/kernel/chyren-vision/: Cargo.toml
chyren-os/kernel/chyren-vision/src/: lib.rs
chyren-os/kernel/omega-aegis/: Cargo.toml
chyren-os/kernel/omega-telegram-gateway/: Cargo.toml  env.sh
chyren-os/kernel/omega-telegram-gateway/src/: lib.rs
core/chyren-os/kernel/: Cargo.toml  PROVENANCE_STRATEGY.md  ari_verify.py  cantor_block.py  ingest_neon.py  telemetry_bus.py
core/chyren-os/kernel/GENESIS/: DISCOVERY_INPUT.md  SOLVER_DIRECTIVE.md
core/chyren-os/kernel/chyren-adccl/: Cargo.toml
core/chyren-os/kernel/chyren-aeon/: Cargo.toml
core/chyren-os/kernel/chyren-cli/: Cargo.toml
core/chyren-os/kernel/chyren-conductor/: Cargo.toml
core/chyren-os/kernel/chyren-mega/: Cargo.toml
core/chyren-os/kernel/chyren-metacog/: Cargo.toml
core/chyren-os/kernel/chyren-myelin/: Cargo.toml
core/chyren-os/kernel/chyren-symbolic/: Cargo.toml
core/chyren-os/kernel/chyren-tee-driver/: Cargo.toml
core/chyren-os/kernel/chyren-telegram-gateway/: Cargo.toml
core/chyren-os/kernel/chyren-telemetry/: Cargo.toml
core/chyren-os/kernel/chyren-worldmodel/: Cargo.toml
core/chyren-os/kernel/scratch/: gen_knowledge.rs
core/chyren-rsil/: Cargo.toml
core/chyren-rsil/src/: abc.rs  lib.rs  traits.rs
medulla/: Cargo.toml  Dockerfile  ari_verify.py  cantor_block.py  lfm_core.py  telemetry_bus.py
medulla/data/: phylactery_kernel.json
medulla/gemini-link/: package-lock.json
medulla/knowledge_injection/: topology_foundations.json  zeta_axioms.json
medulla/omega-adccl/: Cargo.toml
medulla/omega-adccl/src/: adccl_logic.rs  lib.rs
medulla/omega-aegis/: Cargo.toml
medulla/omega-aegis/src/: lib.rs
medulla/omega-aeon/: Cargo.toml
medulla/omega-aeon/src/: lib.rs  scheduler.rs
medulla/omega-cim/: Cargo.toml
medulla/omega-cim/src/: lib.rs
medulla/omega-cli/: Cargo.toml
medulla/omega-cli/src/: api.rs  conductor.rs  lib.rs  main.rs  theme.rs  tui.rs
medulla/omega-cli/tests/: conductor_unit.rs  integration_pipeline.rs  pipeline_smoke.rs
medulla/omega-conductor/: Cargo.toml
medulla/omega-conductor/src/: broker.rs  bus.rs  dispatcher.rs  ingestion.rs  lib.rs  registry.rs  router.rs
medulla/omega-conductor/src/agents/: ingestor.rs  math_spoke.rs  mcts_solver.rs  millennium.rs  millennium_solver.rs  mod.rs  worker.rs
medulla/omega-conductor/src/epistemic/: graph.rs  mod.rs
medulla/omega-core/: Cargo.toml
medulla/omega-core/src/: ari_middleware.rs  axioms.rs  cas.rs  identity.rs  lib.rs  mesh.rs
medulla/omega-core/tests/: ari_middleware.rs
medulla/omega-dream/: Cargo.toml
medulla/omega-dream/src/: identity.rs  lib.rs  simulation.rs  synthesis.rs
medulla/omega-eval/: Cargo.toml
medulla/omega-eval/src/: lib.rs
medulla/omega-integration/: Cargo.toml
medulla/omega-integration/src/: lib.rs  tool_router.rs
medulla/omega-mega/: Cargo.toml
medulla/omega-mega/src/: lib.rs
medulla/omega-metacog/: Cargo.toml
medulla/omega-metacog/src/: dream.rs  lib.rs
medulla/omega-myelin/: Cargo.toml
medulla/omega-myelin/src/: db.rs  eviction.rs  lib.rs  vector.rs
medulla/omega-neocortex/: Cargo.toml
medulla/omega-neocortex/src/: cold_store.rs  lib.rs  proof_index.rs
medulla/omega-phylactery/: Cargo.toml
medulla/omega-phylactery/src/: lib.rs
medulla/omega-spokes/: Cargo.toml
medulla/omega-spokes/src/: lib.rs
medulla/omega-spokes/src/spokes/: anthropic_spoke.rs  deepseek_spoke.rs  gemini_spoke.rs  groq_spoke.rs  mcp_spoke.rs  mod.rs  neon_spoke.rs  ollama_spoke.rs  openai_spoke.rs  openrouter_spoke.rs  perplexity_spoke.rs  search_spoke.rs  vision_spoke.rs
medulla/omega-telegram-gateway/: Cargo.toml  env.sh
medulla/omega-telegram-gateway/src/: aegis.rs  lib.rs  main.rs
medulla/omega-telemetry/: Cargo.toml
medulla/omega-telemetry/src/: lib.rs
medulla/omega-ternary/: Cargo.toml
medulla/omega-ternary/src/: lib.rs
medulla/omega-tui/: Cargo.toml
medulla/omega-tui/src/: app.rs  event.rs  lib.rs  main.rs
medulla/omega-tui/src/api/: client.rs  mod.rs  poll.rs  ws.rs
medulla/omega-tui/src/ui/: footer.rs  header.rs  mod.rs
medulla/omega-vision/: Cargo.toml
medulla/omega-vision/src/: lib.rs
medulla/omega-worldmodel/: Cargo.toml
medulla/scripts/: embed_identity.py
omega/omega-eval/: Cargo.toml
omega/omega-integration/: Cargo.toml
omega/omega-integration/src/: lib.rs  tool_router.rs
omega/omega-metacog/: Cargo.toml
omega/omega-telemetry/: Cargo.toml
omega_workspace/workspace/OmegA-Next/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.gateway  docker-compose.yml
omega_workspace/workspace/OmegA-Next/chyren-web/: .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
omega_workspace/workspace/OmegA-Next/omega-adccl/: Cargo.toml
omega_workspace/workspace/OmegA-Next/omega-aegis/: Cargo.toml
omega_workspace/workspace/OmegA-Next/omega-aeon/: Cargo.toml
omega_workspace/workspace/OmegA-Next/omega-cli/: Cargo.toml
omega_workspace/workspace/OmegA-Next/omega-conductor/: Cargo.toml
omega_workspace/workspace/OmegA-Next/omega-core/: Cargo.toml
omega_workspace/workspace/OmegA-Next/omega-integration/: Cargo.toml
(+3580 files in other folders)
