[workspace]
resolver = "2"
members = [
    "omega-core",
    "omega-aegis",
    "omega-aeon",
    "omega-adccl",
    "omega-myelin",
    "omega-dream",
    "omega-metacog",
    "omega-worldmodel",
    "omega-integration",
    "omega-spokes",
    "omega-telemetry",
    "omega-conductor",
    "omega-eval",
    "omega-cli",
    "omega-cim",
    "omega-ternary",
    "omega-phylactery",
    "omega-telegram-gateway",
    "omega-neocortex", "omega-vision",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
rumqttd = "0.19"
rumqttc = "0.24"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OmegA Collective"]
license = "PROPRIETARY"

[profile.release]
opt-level = 3
lto = true
