[package]
name = "omega-adccl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
omega-core = { path = "../omega-core" }
omega-telemetry = { path = "../omega-telemetry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
