[package]
name = "omega-aeon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]

[dependencies]
omega-core = { path = "../omega-core" }
omega-telemetry = { path = "../omega-telemetry" }
omega-dream = { path = "../omega-dream" }
omega-myelin = { path = "../omega-myelin" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { workspace = true }
tracing = { workspace = true }
