[package]
name = "omega-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "chyren"
path = "src/main.rs"

[[bin]]
name = "chyren_api"
path = "src/bin/chyren_api.rs"

[[bin]]
name = "ingestion_test"
path = "src/bin/ingestion_test.rs"

[[bin]]
name = "ingest_all"
path = "src/bin/ingest_all.rs"

[[bin]]
name = "eval_runner"
path = "src/bin/eval_runner.rs"

[dependencies]
omega-core = { path = "../omega-core" }
omega-aegis = { path = "../omega-aegis" }
omega-adccl = { path = "../omega-adccl" }
omega-myelin = { path = "../omega-myelin" }
omega-aeon = { path = "../omega-aeon" }
omega-integration = { path = "../omega-integration" }
omega-spokes = { path = "../omega-spokes" }
omega-phylactery = { path = "../omega-phylactery" }
omega-conductor = { path = "../omega-conductor" }
omega-telemetry = { path = "../omega-telemetry" }
omega-eval = { path = "../omega-eval" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
actix-web = "4.13.0"
uuid = "1.23.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
