[package]
name = "omega-conductor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
omega-core = { path = "../omega-core" }
omega-telemetry = { path = "../omega-telemetry" }
omega-aegis = { path = "../omega-aegis" }
omega-myelin = { path = "../omega-myelin" }
omega-spokes = { path = "../omega-spokes" }
omega-dream = { path = "../omega-dream" }
omega-metacog = { path = "../omega-metacog" }
omega-phylactery = { path = "../omega-phylactery" }
omega-neocortex = { path = "../omega-neocortex" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rumqttc = "0.24"
rumqttd = { workspace = true }
toml    = "0.8"
