[package]
name = "omega-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", optional = true, features = ["full"] }
thiserror = "2"
sha2 = { workspace = true }
hex = { workspace = true }

[features]
draft = []
