[package]
name = "omega-dream"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]

[dependencies]
omega-core = { path = "../omega-core" }
omega-telemetry = { path = "../omega-telemetry" }
omega-neocortex = { path = "../omega-neocortex" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
