[package]
name = "omega-neocortex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The Neocortex: Matrix-style program library for Chyren. Loadable knowledge programs ingested at runtime — domain-signed, integrity-verified, injected into the sovereign mind."

[dependencies]
omega-core = { path = "../omega-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
