[package]
name = "omega-neocortex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The omega-neocortex component of the Chyren Sovereign Intelligence Orchestrator."

[dependencies]
omega-core = { path = "../omega-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
