[package]
name = "omega-phylactery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
omega-core = { path = "../omega-core" }
omega-myelin = { path = "../omega-myelin" }
tokio = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
tracing = { workspace = true }
