[package]
name = "omega-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chyren-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = "0.24"
termimad = "0.31"
unicode-width = "0.2"
fuzzy-matcher = "0.3"
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
