[package]
name = "omega-vision"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait = "0.1"
anyhow = "1.0"
omega-core = { path = "../omega-core" }
omega-spokes = { path = "../omega-spokes" }
