[package]
name = "omega-eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]

[dependencies]
omega-core = { path = "../omega-core" }
omega-aegis = { path = "../omega-aegis" }
omega-adccl = { path = "../omega-adccl" }
omega-telemetry = { path = "../omega-telemetry" }
omega-myelin = { path = "../omega-myelin" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
