[package]
name = "omega-integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]

[dependencies]
omega-core = { path = "../omega-core" }
omega-spokes = { path = "../omega-spokes" }
omega-telemetry = { path = "../omega-telemetry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
draft = []
