[package]
name = "omega-metacog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]

[dependencies]
omega-core = { path = "../omega-core" }
omega-myelin = { path = "../omega-myelin" }
omega-aegis = { path = "../omega-aegis" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
