[package]
name = "omega-telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]

[dependencies]
omega-core = { path = "../omega-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", optional = true, features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
draft = []
