[package]
name = "chyren-conductor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chyren-core = { path = "../chyren-core" }
chyren-telemetry = { path = "../chyren-telemetry" }
chyren-aegis = { path = "../chyren-aegis" }
chyren-myelin = { path = "../chyren-myelin" }
chyren-spokes = { path = "../chyren-spokes" }
chyren-dream = { path = "../chyren-dream" }
chyren-metacog = { path = "../chyren-metacog" }
chyren-phylactery = { path = "../chyren-phylactery" }
chyren-neocortex = { path = "../chyren-neocortex" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rumqttc = "0.24"
rumqttd = { workspace = true }
toml    = "0.8"
tracing = { workspace = true }
