[package]
name = "chyren-metacog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]

[dependencies]
chyren-core = { path = "../chyren-core" }
chyren-myelin = { path = "../chyren-myelin" }
chyren-aegis = { path = "../chyren-aegis" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
