[package]
name = "chyren-vision"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait = "0.1"
anyhow = "1.0"
chyren-core = { path = "../chyren-core" }
chyren-spokes = { path = "../chyren-spokes" }
