[package]
name = "omega-telegram-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "chyren-telegram"
path = "src/main.rs"

[dependencies]
chyren-cli = { path = "../omega-cli" }
omega-core = { path = "../omega-core" }
serde.workspace = true
serde_json.workspace = true
teloxide = "0.17.0"
tokio.workspace = true
anyhow = "1"
