[workspace]
resolver = "2"
members = [
    "omega-core",
    "omega-aegis",
    "omega-aeon",
    "omega-adccl",
    "omega-myelin",
    "omega-dream",
    "omega-metacog",
    "omega-worldmodel",
    "omega-integration",
    "omega-telemetry",
    "omega-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OmegA Collective"]
license = "PROPRIETARY"

[profile.release]
opt-level = 3
lto = true
