[package]
name = "chyren-adccl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chyren-core = { path = "../chyren-core" }
chyren-telemetry = { path = "../chyren-telemetry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
