[package]
name = "chyren-aeon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]

[dependencies]
chyren-core = { path = "../chyren-core" }
chyren-telemetry = { path = "../chyren-telemetry" }
chyren-dream = { path = "../chyren-dream" }
chyren-myelin = { path = "../chyren-myelin" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { workspace = true }
tracing = { workspace = true }
