[package]
name = "chyren-myelin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]

[dependencies]
chyren-core = { path = "../chyren-core" }
chyren-telemetry = { path = "../chyren-telemetry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
ndarray = "0.17.2"
ndarray-stats = "0.7.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0.102"
